--- a/appsettings.json
+++ b/appsettings.json
@@ -9,5 +9,13 @@
   "AllowedHosts": "*",
   "MountSettings": {
     "HostRoot": "/hostroot"
+  },
+  "EmailSettings": {
+    "SmtpServer": "smtp.gmail.com",
+    "SmtpPort": 587,
+    "SenderName": "Hệ thống OSManager",
+    "SenderEmail": "way05058@gmail.com",
+    "Username": "way05058@gmail.com",
+    "Password": "zdhk fooo flmj dnbz "
   }
 }
